# industrial-controls

./: .clang-format  .gitignore  CMakeLists.txt  README.md  industrial.qrc  industrial_qml.qrc  industrial_resources.qrc  qml.qrc  resources.qrc
Controls/: ApplicationWindow.qml  BackgroundInput.qml  BackgroundItem.qml  BottomBar.qml  Button.qml  Card.qml  CheckBox.qml  ComboBox.qml  ContentItem.qml  CoordSpinBox.qml  CoordSpinBoxInput.qml  DelayButton.qml  FilterField.qml  Frame.qml  Handle.qml  Hatch.qml  ItemDelegate.qml  Label.qml  Led.qml  MenuIndicator.qml  MenuItem.qml  NumericInput.qml  Pane.qml  Popup.qml  RadioButton.qml  RealSpinBox.qml  ScrollBar.qml  Slider.qml  SpinBox.qml  Switch.qml  TabBar.qml  TabButton.qml  TextField.qml
Industrial/Controls/: AddressField.qml  ApplicationWindow.qml  AutoTabBar.qml  BackgroundInput.qml  BackgroundItem.qml  BlinkingLed.qml  BottomBar.qml  Button.qml  ButtonBar.qml  Card.qml  CheckBox.qml  CheckMarkBase.qml  ClickBar.qml  ColorField.qml  ColoredIcon.qml  ComboBox.qml  ContentItem.qml  CoordField.qml  CoordSpinBox.qml  CoordSpinBoxInput.qml  DateTimeField.qml  DelayButton.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  FilterField.qml  FloatButton.qml  Frame.qml  Handle.qml  Hatch.qml  Industrial.qml  IndustrialColors.qml  ItemDelegate.qml  Label.qml  Led.qml  Link.qml  ListButton.qml  Menu.qml  MenuButton.qml  MenuIndicator.qml  (+32 more)
Industrial/Indicators/: ArtificialHorizon.qml  AttitudeDirectorIndicator.qml  BarIndicator.qml  BatteryIndicator.qml  BlinkingLed.qml  EkfIndicator.qml  Horizon.qml  LadderMark.qml  LadderPicker.qml  PitchScale.qml  RssiIndicator.qml  TurnIndicator.qml  ValueLabel.qml  qmldir
Industrial/JS/: qmldir
Industrial/Shaders/: Hatch.qml  qmldir
Industrial/Tools/: qmldir
Industrial/Widgets/: CalendarPicker.qml  ColorPicker.qml  Draggable.qml  DualColorPicker.qml  FileBrowser.qml  ListFader.qml  ListItem.qml  ListTable.qml  ListWrapper.qml  SplitView.qml  TableView.qml  TableViewColumn.qml  TimePicker.qml  qmldir
example/: CMakeLists.txt  Controls.qml  Indicators.qml  Main.qml  demo.json  main.cpp  qml.qrc  theme.json
example/qml/: Buttons.qml  Configuration.qml  Controls.qml  Edits.qml  Indicators.qml  Inputs.qml  Main.qml  Menus.qml  Misc.qml  SlidersCheckers.qml  SwitchsNSliders.qml  Test.qml
example/sources/: component_cache_trimmer.cpp  component_cache_trimmer.h  main.cpp
includes/: colors.h  control_size.h  control_size_factory.h  custom_double_validator.h  export.h  file_browser_model.h  industrial_plugin.h  palette.h  palette_factory.h  svg_item.h  theme.h  theme_configurator.h  theme_loader.h
qml/: industrial.qrc  qml.qrc  qmldir
qml/Controls/: CoordSpinBox.qml  NumericInput.qml  Pane.qml  qmldir
qml/Indicators/: DesiredAnglesMark.qml  Ladder.qml  LadderButtons.qml  LandingIndicator.qml  PitchScale.qml  PlaneMark.qml  RollScale.qml  SituationIndicator.qml  SpeedArrow.qml  qmldir
qml/Indicators/Ladders/: LadderButtons.qml  LadderPicker.qml
sources/: colors.cpp  control_size.cpp  control_size_factory.cpp  custom_double_validator.cpp  file_browser_model.cpp  industrial_plugin.cpp  palette.cpp  palette_factory.cpp  register_types.cpp  svg_item.cpp  theme.cpp  theme_configurator.cpp  theme_loader.cpp
translations/: industrial_control_en.ts  industrial_control_ru.ts
